compiler/tests/fixtures/invalid/semantics/inspection_wrong_operand_types.viv
// Invalid: inspection with item and character roles in swapped positions

action read-journal:
    roles:
        @reader:
            as: initiator
        @journal:
            as: item
        @subject:
            as: recipient
    effects:
        @journal inspect @subject
